--- a/build.gradle
+++ b/build.gradle
@@ -12,8 +12,8 @@ buildscript {
         mavenLocal()
     }
     dependencies {
-        classpath "com.ca.apim.gateway:gateway-developer-plugin:0.8.9-SNAPSHOT"
-        classpath "com.ca.apim.gateway:gateway-export-plugin:0.8.9-SNAPSHOT"
+        classpath "com.ca.apim.gateway:gateway-developer-plugin:0.8.+"
+        classpath "com.ca.apim.gateway:gateway-export-plugin:0.8.+"
         classpath "com.bmuschko:gradle-docker-plugin:4.6.2"
     }
 }
