--- a/deployment/build.gradle
+++ b/deployment/build.gradle
@@ -8,7 +8,7 @@ dependencies {
 //    bundle project(':AWS-SK')
 //    bundle project(':ConsulUpdate')
 //    bundle project(':Enterprise')
-    bundle project(':example')
+    bundle project(':gmu')
 
 //    customassertion group: 'AWSAssertion', name: 'AWSAssertion', ext: 'jar', version: '1.0.05'
 //    customassertion group: 'Aws4SignerAssertion', name: 'Aws4SignerAssertion', ext: 'jar', version: '1.0.05'
