--- a/settings.gradle
+++ b/settings.gradle
@@ -8,4 +8,4 @@ rootProject.name = 'AmoghGateway'
 
 //include 'deployment', 'example', 'AWS-SK', 'ConsulUpdate'
 //include 'deployment', 'AWS-SK', 'ConsulUpdate', 'Enterprise'
-include 'deployment', 'example'
+include 'deployment', 'gmu'
