Adding Enterprise and AWS-SK folders

--- a/Enterprise/build.gradle
+++ b/Enterprise/build.gradle
@@ -6,7 +6,9 @@
 
 GatewayExportConfig {
     folderPath = '/Enterprise'
-    exportEntities = [
-            privateKeys: [ "consulgw.security.broadcom.com" ]
-    ]
+//    exportEntities = [
+//            privateKeys: [ "ephemeral.aws.com" ],
+//            certificates: ["ephemeral.aws.com"],
+//            certificates: ["localhost"]
+//    ]
 }
