--- a/Enterprise/src/main/gateway/config/services.yml
+++ b/Enterprise/src/main/gateway/config/services.yml
@@ -1,6 +1,6 @@
-Enterprise/consul/Consul - ServiceRoute:
-  url: "/microsvc/*"
-  policy: "Enterprise/consul/Consul - ServiceRoute"
+Enterprise/Proxies/ORDER:
+  url: "/order/*"
+  policy: "Enterprise/Proxies/ORDER"
   httpMethods:
   - "DELETE"
   - "POST"
@@ -8,79 +8,46 @@ Enterprise/consul/Consul - ServiceRoute:
   - "PUT"
   properties: {}
   wssProcessingEnabled: false
-
-
-#Enterprise/consul/Consul-RegisterService:
-#  url: "/service/register"
-#  policy: "Enterprise/consul/Consul-RegisterService"
-#  httpMethods:
-#  - "DELETE"
-#  - "POST"
-#  - "GET"
-#  - "PUT"
-#  properties: {}
-#  wssProcessingEnabled: false
-#Enterprise/consul/Consul-Get:
-#  url: "/get/key*"
-#  policy: "Enterprise/consul/Consul-Get"
-#  httpMethods:
-#  - "DELETE"
-#  - "POST"
-#  - "GET"
-#  - "PUT"
-#  properties: {}
-#  wssProcessingEnabled: false
-#Enterprise/consul/Consul-Route:
-#  url: "/route/key*"
-#  policy: "Enterprise/consul/Consul-Route"
-#  httpMethods:
-#  - "DELETE"
-#  - "POST"
-#  - "GET"
-#  - "PUT"
-#  properties: {}
-#  wssProcessingEnabled: false
-#Enterprise/consul/Consul-ServiceCatalog:
-#  url: "/service/catalog*"
-#  policy: "Enterprise/consul/Consul-ServiceCatalog"
-#  httpMethods:
-#  - "DELETE"
-#  - "POST"
-#  - "GET"
-#  - "PUT"
-#  properties: {}
-#  wssProcessingEnabled: false
-#Enterprise/consul/Consul-PUT:
-#  url: "/put/key*"
-#  policy: "Enterprise/consul/Consul-PUT"
-#  httpMethods:
-#  - "DELETE"
-#  - "POST"
-#  - "GET"
-#  - "PUT"
-#  properties: {}
-#  wssProcessingEnabled: false
-#Enterprise/consul/Consul-AgentService:
-#  url: "/agent/services"
-#  policy: "Enterprise/consul/Consul-AgentService"
-#  httpMethods:
-#  - "DELETE"
-#  - "POST"
-#  - "GET"
-#  - "PUT"
-#  properties: {}
-#  wssProcessingEnabled: false
-#Enterprise/consul/Consul-DeRegisterService:
-#  url: "/service/deregister"
-#  policy: "Enterprise/consul/Consul-DeRegisterService"
-#  httpMethods:
-#  - "DELETE"
-#  - "POST"
-#  - "GET"
-#  - "PUT"
-#  properties: {}
-#  wssProcessingEnabled: false
-
+Enterprise/Consul/consul-CacheUpdate:
+  url: "/cache/update"
+  policy: "Enterprise/Consul/consul-CacheUpdate"
+  httpMethods:
+  - "DELETE"
+  - "POST"
+  - "GET"
+  - "PUT"
+  properties: {}
+  wssProcessingEnabled: false
+Enterprise/Consul/Consul-ServiceRoute:
+  url: "/microsvc*"
+  policy: "Enterprise/Consul/Consul-ServiceRoute"
+  httpMethods:
+  - "DELETE"
+  - "POST"
+  - "GET"
+  - "PUT"
+  properties: {}
+  wssProcessingEnabled: false
+Enterprise/Consul/Consul-Get:
+  url: "/get/key*"
+  policy: "Enterprise/Consul/Consul-Get"
+  httpMethods:
+  - "DELETE"
+  - "POST"
+  - "GET"
+  - "PUT"
+  properties: {}
+  wssProcessingEnabled: false
+Enterprise/Consul/Consul-AgentService:
+  url: "/agent/services"
+  policy: "Enterprise/Consul/Consul-AgentService"
+  httpMethods:
+  - "DELETE"
+  - "POST"
+  - "GET"
+  - "PUT"
+  properties: {}
+  wssProcessingEnabled: false
 Enterprise/Proxies/CONTACT:
   url: "/contact/*"
   policy: "Enterprise/Proxies/CONTACT"
@@ -91,9 +58,79 @@ Enterprise/Proxies/CONTACT:
   - "PUT"
   properties: {}
   wssProcessingEnabled: false
-Enterprise/Proxies/Order:
-  url: "/order/*"
-  policy: "Enterprise/Proxies/Order"
+Enterprise/Consul/Consul-ServiceCatalog:
+  url: "/service/catalog*"
+  policy: "Enterprise/Consul/Consul-ServiceCatalog"
+  httpMethods:
+  - "DELETE"
+  - "POST"
+  - "GET"
+  - "PUT"
+  properties: {}
+  wssProcessingEnabled: false
+Enterprise/JWT/JWT-Basic:
+  url: "/mediate/getJWT"
+  policy: "Enterprise/JWT/JWT-Basic"
+  httpMethods:
+  - "DELETE"
+  - "POST"
+  - "GET"
+  - "PUT"
+  properties: {}
+  wssProcessingEnabled: false
+Enterprise/Consul/Consul-PUT:
+  url: "/put/key*"
+  policy: "Enterprise/Consul/Consul-PUT"
+  httpMethods:
+  - "DELETE"
+  - "POST"
+  - "GET"
+  - "PUT"
+  properties: {}
+  wssProcessingEnabled: false
+Enterprise/JWT/JWT-METADATA:
+  url: "/.well-known/v2.0/openid-configuration"
+  policy: "Enterprise/JWT/JWT-METADATA"
+  httpMethods:
+  - "DELETE"
+  - "POST"
+  - "GET"
+  - "PUT"
+  properties: {}
+  wssProcessingEnabled: false
+Enterprise/Consul/Consul-DeRegisterService:
+  url: "/service/deregister"
+  policy: "Enterprise/Consul/Consul-DeRegisterService"
+  httpMethods:
+  - "DELETE"
+  - "POST"
+  - "GET"
+  - "PUT"
+  properties: {}
+  wssProcessingEnabled: false
+Enterprise/Proxies/CUSTOMER:
+  url: "/customer/*"
+  policy: "Enterprise/Proxies/CUSTOMER"
+  httpMethods:
+  - "DELETE"
+  - "POST"
+  - "GET"
+  - "PUT"
+  properties: {}
+  wssProcessingEnabled: false
+Enterprise/Consul/Consul-RegisterService:
+  url: "/service/register"
+  policy: "Enterprise/Consul/Consul-RegisterService"
+  httpMethods:
+  - "DELETE"
+  - "POST"
+  - "GET"
+  - "PUT"
+  properties: {}
+  wssProcessingEnabled: false
+Enterprise/JWT/JWT-Validate:
+  url: "/jwt/validate"
+  policy: "Enterprise/JWT/JWT-Validate"
   httpMethods:
   - "DELETE"
   - "POST"
@@ -104,6 +141,26 @@ Enterprise/Proxies/Order:
 Enterprise/Proxies/PROXY1:
   url: "/rest/api01"
   policy: "Enterprise/Proxies/PROXY1"
+  httpMethods:
+  - "DELETE"
+  - "POST"
+  - "GET"
+  - "PUT"
+  properties: {}
+  wssProcessingEnabled: false
+Enterprise/Consul/Consul-KeyRoute:
+  url: "/route/key*"
+  policy: "Enterprise/Consul/Consul-KeyRoute"
+  httpMethods:
+  - "DELETE"
+  - "POST"
+  - "GET"
+  - "PUT"
+  properties: {}
+  wssProcessingEnabled: false
+Enterprise/JWT/JWT-JWKSEP:
+  url: "/discovery/v2.0/keys"
+  policy: "Enterprise/JWT/JWT-JWKSEP"
   httpMethods:
   - "DELETE"
   - "POST"
